infrastructure/base/controllers/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
    - name: tls-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "longhorn.home.arpa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
